[package]
name = "cedra-config"
description = "Cedra config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-crypto = { workspace = true }
cedra-global-constants = { workspace = true }
cedra-logger = { workspace = true }
cedra-secure-storage = { workspace = true }
cedra-short-hex-str = { workspace = true }
cedra-temppath = { workspace = true }
cedra-types = { workspace = true }
arr_macro = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
get_if_addrs = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
cedra-crypto = { workspace = true }
cedra-types = { workspace = true, features = ["fuzzing"] }
tempfile = { workspace = true }

[features]
default = []
failpoints = []
fuzzing = ["cedra-crypto/fuzzing", "cedra-types/fuzzing"]
smoke-test = []
testing = []
tokio-console = []
