[package]
name = "cedra-dkg-runtime"
description = "Cedra DKG runtime"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-bounded-executor = { workspace = true }
cedra-channels = { workspace = true }
cedra-config = { workspace = true }
cedra-consensus-types = { workspace = true }
cedra-crypto = { workspace = true }
cedra-crypto-derive = { workspace = true }
cedra-enum-conversion-derive = { workspace = true }
cedra-event-notifications = { workspace = true }
cedra-infallible = { workspace = true }
cedra-logger = { workspace = true }
cedra-metrics-core = { workspace = true }
cedra-network = { workspace = true }
cedra-reliable-broadcast = { workspace = true }
cedra-runtimes = { workspace = true }
cedra-safety-rules = { workspace = true }
cedra-time-service = { workspace = true }
cedra-types = { workspace = true }
cedra-validator-transaction-pool = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[features]
smoke-test = []
