[package]
name = "cedra-mempool"
description = "Cedra mempool for consuming incoming transactions"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-bounded-executor = { workspace = true }
cedra-channels = { workspace = true }
cedra-config = { workspace = true }
cedra-consensus-types = { workspace = true }
cedra-crypto = { workspace = true }
cedra-event-notifications = { workspace = true }
cedra-infallible = { workspace = true }
cedra-logger = { workspace = true }
cedra-mempool-notifications = { workspace = true }
cedra-metrics-core = { workspace = true }
cedra-netcore = { workspace = true }
cedra-network = { workspace = true }
cedra-peer-monitoring-service-types = { workspace = true }
cedra-runtimes = { workspace = true }
cedra-short-hex-str = { workspace = true }
cedra-storage-interface = { workspace = true }
cedra-time-service = { workspace = true }
cedra-types = { workspace = true }
cedra-vm-validator = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
cedra-compression = { workspace = true }
cedra-config = { workspace = true }
cedra-id-generator = { workspace = true }
cedra-network = { workspace = true, features = ["fuzzing"] }
cedra-storage-interface = { workspace = true, features = ["fuzzing"] }
cedra-time-service = { workspace = true, features = ["testing"] }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "cedra-vm-validator/failpoints"]
fuzzing = ["proptest", "cedra-types/fuzzing", "cedra-storage-interface/fuzzing", "cedra-config/fuzzing"]
consensus-only-perf-test = []
