[package]
name = "cedra-oracle-runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
futures-channel = { workspace  = true }
cedra-time-service = { workspace  = true }
cedra-bounded-executor = { workspace  = true }
cedra-infallible = { workspace = true }
rand = { workspace = true }
cedra-runtimes = { workspace = true }
cedra-channels = { workspace = true }
cedra-metrics-core = { workspace = true }
cedra-types = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
cedra-crypto = { workspace = true }
cedra-crypto-derive = { workspace = true }
cedra-enum-conversion-derive = { workspace = true }
cedra-validator-transaction-pool = { workspace = true }
move-core-types = { workspace = true }
cedra-event-notifications = { workspace = true }
cedra-network = { workspace = true }
cedra-config = { workspace = true }
tokio-retry = { workspace = true }
cedra-reliable-broadcast = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
cedra-api-types = { workspace = true }
cedra-logger = { workspace = true }
cedra-rest-client = { workspace = true }
cedra-sdk = { workspace = true }
cedra-vm = { workspace = true }
cedra-resource-viewer = { workspace = true }
cedra-storage-interface = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
move-binary-format = { workspace = true }
cedra-db = { workspace = true }
cedra-db-indexer = { workspace = true }
move-vm-types = { workspace = true }
move-vm-runtime = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
hex.workspace = true
faster-hex = "0.10.0"



[build-dependencies]
tonic-prost-build = "0.14"
