[package]
name = "cedra-vm-validator"
description = "Cedra vm validator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-logger = { workspace = true }
cedra-storage-interface = { workspace = true }
cedra-types = { workspace = true }
cedra-vm = { workspace = true }
cedra-vm-environment = { workspace = true }
cedra-vm-logging = { workspace = true }
fail = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
cedra-cached-packages = { workspace = true }
cedra-crypto = { workspace = true }
cedra-db = { workspace = true }
cedra-executor-test-helpers = { workspace = true }
cedra-gas-schedule = { workspace = true, features = ["testing"] } 
cedra-temppath = { workspace = true }
cedra-types = { workspace = true, features = ["testing"] }
cedra-vm-genesis = { workspace = true }
move-vm-types = { workspace = true, features = ["testing"] }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["cedra-types/fuzzing", "cedra-crypto/fuzzing", "cedra-db/fuzzing"]
