[package]
name = "cedra-openapi-spec-generator"
description = "Cedra API OpenAPI Spec Generator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-api = { workspace = true }
cedra-config = { workspace = true }
cedra-mempool = { workspace = true, features = ["fuzzing"] }
cedra-storage-interface = { workspace = true }
cedra-types = { workspace = true }
clap = { workspace = true }
