[package]
name = "cedra-api-test-context"
description = "Cedra API test context"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cedra-api = { workspace = true }
cedra-api-types = { workspace = true }
cedra-cached-packages = { workspace = true }
cedra-config = { workspace = true }
cedra-crypto = { workspace = true }
cedra-db = { workspace = true, features = ["fuzzing"] }
cedra-executor = { workspace = true }
cedra-executor-types = { workspace = true }
cedra-framework = { workspace = true }
cedra-genesis = { workspace = true }
cedra-indexer-grpc-table-info = { workspace = true }
cedra-mempool = { workspace = true, features = ["fuzzing"] }
cedra-mempool-notifications = { workspace = true }
cedra-sdk = { workspace = true }
cedra-storage-interface = { workspace = true }
cedra-temppath = { workspace = true }
cedra-types = { workspace = true }
cedra-vm = { workspace = true }
cedra-vm-logging = { workspace = true }
cedra-vm-validator = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
goldenfile = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
warp-reverse-proxy = { workspace = true }
