[package]
name = "cedra-api-types"
description = "Cedra API Types"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-config = { workspace = true }
cedra-crypto = { workspace = true }
cedra-logger = { workspace = true }
cedra-openapi = { workspace = true }
cedra-resource-viewer = { workspace = true }
cedra-storage-interface = { workspace = true }
cedra-types = { workspace = true }
cedra-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["async-trait", "poem", "poem-openapi-derive"]
