[package]
name = "cedra-comparison-testing"
version = "0.1.0"
authors = ["Cedra Labs <opensource@cedra.network>"]
description = "A tool to perform comparison testing on the compiler"
repository = "https://github.com/cedra-labs/cedra"
homepage = "https://cedra.dev"
license = "Apache-2.0"
publish = false
edition = "2021"
default-run = "cedra-comparison-testing"

[dependencies]
anyhow = { workspace = true }
cedra-block-executor = { workspace = true }
cedra-framework = { workspace = true }
cedra-language-e2e-tests = { workspace = true }
cedra-rest-client = { workspace = true }
cedra-transaction-simulation = { workspace = true }
cedra-types = { workspace = true }
cedra-validator-interface = { workspace = true }
cedra-vm = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
legacy-move-compiler = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-model = { workspace = true }
move-package = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
