[package]
name = "cedra-gas-meter"
description = "Gas meter implementation for the Cedra blockchain"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cedra-gas-algebra = { workspace = true }
cedra-gas-schedule = { workspace = true }
cedra-logger = { workspace = true }
cedra-types = { workspace = true }
cedra-vm-types = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
