[package]
name = "cedra-gas-profiling"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
handlebars = { workspace = true }
inferno = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }

cedra-gas-algebra = { workspace = true }
cedra-gas-meter = { workspace = true }
cedra-gas-schedule = { workspace = true }
cedra-types = { workspace = true }
cedra-vm-types = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
