[package]
name = "cedra-gas-schedule"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cedra-gas-algebra = { workspace = true }
cedra-global-constants = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }

[features]
testing = ["cedra-global-constants/testing"]
