[package]
name = "cedra-oracle"
description = "Cedra oracle - fetch and update whitelist stablecoin prices. Send prices to cedra-vm"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-api-types = { workspace = true }
cedra-logger = { workspace = true }
cedra-rest-client = { workspace = true }
cedra-sdk = { workspace = true }
cedra-types = { workspace = true }
move-core-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
move-binary-format = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
cedra-rest-client = { workspace = true }