[package]
name = "cedra-transaction-simulation"
description = "Cedra Transaction Simulation"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-crypto = { workspace = true }
cedra-keygen = { workspace = true }
cedra-types = { workspace = true }
cedra-vm-genesis = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
cedra-crypto = { workspace = true, features = ["cloneable-private-keys"] }
