[package]
name = "cedra-transactional-test-harness"
description = "Transactional testing framework for Move"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-api-types = { workspace = true }
cedra-block-executor = { workspace = true }
cedra-cached-packages = { workspace = true }
cedra-crypto = { workspace = true }
cedra-framework = { workspace = true }
cedra-gas-schedule = { workspace = true }
cedra-resource-viewer = { workspace = true }
cedra-storage-interface = { workspace = true }
cedra-transaction-simulation = { workspace = true }
cedra-types = { workspace = true, features = ["fuzzing"] }
cedra-vm = { workspace = true }
cedra-vm-environment = { workspace = true }
cedra-vm-genesis = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }
hex = { workspace = true }
move-binary-format = { workspace = true, features = ["fuzzing"] }
move-bytecode-verifier = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler-v2 = { workspace = true }
move-core-types = { workspace = true, features = ["fuzzing"] }
move-model = { workspace = true }
move-symbol-pool = { workspace = true }
move-transactional-test-runner = { workspace = true }
move-vm-runtime = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
cedra-types = { workspace = true, features = ["fuzzing"] }
datatest-stable = { workspace = true }

[[test]]
name = "tests"
harness = false
