[package]
name = "cedra-vm-environment"
description = "Cedra VM environment"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cedra-framework = { workspace = true }
cedra-gas-algebra = { workspace = true }
cedra-gas-schedule = { workspace = true }
cedra-move-stdlib = { workspace = true }
cedra-native-interface = { workspace = true }
cedra-table-natives = { workspace = true }
cedra-types = { workspace = true }
cedra-vm-types = { workspace = true }
bcs = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
once_cell = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
cedra-types = { workspace = true, features = ["testing", "fuzzing"] }
serde = { workspace = true }
