[package]
name = "cedra-vm-logging"
description = "Cedra VM speculative logging utility"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cedra-crypto = { workspace = true }
cedra-logger = { workspace = true }
cedra-metrics-core = { workspace = true }
cedra-speculative-state-helper = { workspace = true }
cedra-types = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
